fix username spacing

--- a/client/src/components/Home/HomePage/Post/UserData/UserData.css
+++ b/client/src/components/Home/HomePage/Post/UserData/UserData.css
@@ -25,7 +25,7 @@
   font-size: 32px;
   font-weight: 500;
   padding-top: 5px;
-  width: 70%;
+  width: 67%;
   justify-content: center;
 }
 
